--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "angular": "^1.4.8",
     "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
