--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.1.0"
+    "grunt-sass": "^1.1.0",
+    "http-server": "^0.8.5"
+  },
+  "scripts":{
+    "start": "http-server -a 0.0.0.0 -p 8080"
   }
 }
