--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
   ],
   "dependencies": {
     "angular-drag-and-drop-lists": "dndLists#~1.3.0"
+  },
+  "devDependencies": {
+    "ngstorage": "~0.3.10"
   }
 }
